tests/predator-regre/test-0267.err
test-0267.c:10: error: invalid realloc()
test-0267.c:10: error: double free by realloc()
